startup_log.txt
Traceback (most recent call last):
  File "h:\£ª§Þapp\app.py", line 2, in <module>
    from fund_analyzer import FundAnalyzer
  File "h:\£ª§Þapp\fund_analyzer.py", line 658
    continue
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop
